--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about-section">
+    <section id="about" class="about-description-section">
         <div class="container">
                 <div class="about-header">
                     <h2>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</h2>
