--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The Prairie Trading Corp</title>
+    <title>Contact Us</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +18,7 @@
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <link href="css/about.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -78,7 +79,7 @@
                 <div class="prairie-header">
                     <div class="people-wrapper">
                         <p>
-                            <strong>About Us</strong>
+                            <strong>Contact Us</strong>
                         </p>
                     </div>
                 </div>
@@ -87,69 +88,66 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about-description-section">
-        <div class="container">
-                <div class="about-header">
-                    <h2>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</h2>
-                </div>
-                <div class="our-team">
-                    <h1>Our Team</h1>
-                </div>
-                <div class="team-profile">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
+    <form id="contact-form" method="post" action="contact.php" role="form">
+
+    <div class="messages"></div>
+
+    <div class="container">
+        <div class="controls">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="form_name">Firstname *</label>
+                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                        <div class="help-block with-errors"></div>
                     </div>
                 </div>
-        </div>
-    </section>
-
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-                <div class="contact-header">
-                    <span class="site-address">
-                        The Prairie Trading Corp, 209 W 38th st, Unit 1102, New York, NY, 10018, United States
-                    </span>
-                    <br>
-                    <span rel="tel">212-921-1859</span>
-                    <a href="mailto:piauto888@aol.com"><span>piauto888@aol.com</span></a>
-                </div>
-                <div class="col-lg-12">
-                    <div class="rights-reserved">
-                        <p>The Prairie Trading Corp. 2016. all rights reserved</p>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="form_lastname">Lastname *</label>
+                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                        <div class="help-block with-errors"></div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="form_email">Email *</label>
+                        <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="form_phone">Phone</label>
+                        <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="form_message">Message *</label>
+                        <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <input type="submit" class="btn btn-success btn-send" value="Send message">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+
+</form>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
