--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container" id="nav-container">
+        <div class="" id="nav-container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -63,7 +63,7 @@
                             <a class="page-scroll" id="link" href="#">Produce with Us</a>
                         </li>
                         <li class="link">
-                            <a class="page-scroll" id="link" href="#">Contact Us</a>
+                            <a class="page-scroll" id="link" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
             </div>
