--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <link href="css/about.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -74,10 +75,10 @@
 
 
     <!-- Intro Section -->
-    <section id="people" class="people-section">
+    <section id="contact" class="contact-section">
         <div class="container">
                 <div class="prairie-header">
-                    <div class="people-wrapper">
+                    <div class="contact-wrapper">
                         <p>
                             <strong>Contact Us</strong>
                         </p>
