Website entire layout is finished

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                             <a class="page-scroll" id="link" href="about.html">About</a>
                         </li>
                         <li class="link">
-                            <a class="page-scroll" id="link" href="#">Produce with Us</a>
+                            <a class="page-scroll" id="link" href="produce.html">Produce with Us</a>
                         </li>
                         <li class="link">
                             <a class="page-scroll" id="link" href="contact.html">Contact Us</a>
