--- a/produce.html
+++ b/produce.html
@@ -17,7 +17,6 @@
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
-    <link href="css/about.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -73,12 +72,12 @@
 
 
     <!-- Intro Section -->
-    <section id="people" class="people-section">
+    <section id="contact" class="contact-section">
         <div class="container">
                 <div class="prairie-header">
-                    <div class="people-wrapper">
+                    <div class="contact-wrapper">
                         <p>
-                            <strong>About Us</strong>
+                            <strong>Produce with Us</strong>
                         </p>
                     </div>
                 </div>
@@ -86,50 +85,17 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="about-description-section">
+    <!-- Services Section -->
+    <section id="services" class="services-section">
         <div class="container">
-                <div class="about-header">
-                    <h2>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</h2>
-                </div>
-                <div class="our-team">
-                    <h1>Our Team</h1>
-                </div>
-                <div class="team-profile">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-pic">
-                                <img class="team-photo" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
-                            </div>
-                            <h3>Name</h3>
-                            <h4>Position</h4>
-                        </div>
-                    </div>
+                <div class="services-header">
+                    <h1>Services</h1>
+                    <p>High Quality Garments</p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
+                    <p></p>
                 </div>
         </div>
     </section>
-
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
