Added homepage information

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </p>
 
                         <p>&nbsp;</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        <p>We do it right, we do it fast</p>
 
                     </div>
                 </div>
@@ -95,18 +95,25 @@
     <section id="about" class="about-section">
         <div class="container">
                 <div class="about-header">
-                    <h1>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</h1>
-                    <h2>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</h2>
+                    <h1>The Prairie Trading Corp. is dedicated to providing the best production service in the industry.</h1>
+                    <h2>We handle the entire production process, from fabric development to delivery to your door. Whether you are a global brand, an up and coming fashion designer, or a independent clothing store, Prairie Trading Corp is here to fill your needs.</h2>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12">
+            <div class="row">
+                    <div class="col-lg-6">
                         <img class="fashion-district" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/13103429_1736461356598301_6777169868591811346_n.jpg?oh=07cb456ccf35178b729ea2764c6bfae3&oe=58AE4B50">
+                        <div class="nyc-description">
+                            <h3>New York City</h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non</p>
+                        </div>
                     </div>
-                </div>
-                <div class="nyc-description">
-                    <h3>New York City</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non</p>
-                </div>
+                    <div class="col-lg-6">
+                        <img class="fashion-district" src="https://cdn-images-1.medium.com/max/800/1*e3rxyVsruMikw_YtvJ34Eg.jpeg">
+                        <div class="nyc-description">
+                            <h3>China - Hangzhou</h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non</p>
+                        </div>
+                    </div>
+            </div>
         </div>
     </section>
 
@@ -116,7 +123,7 @@
                 <div class="services-header">
                     <h1>Services</h1>
                     <p>High Quality Garments</p>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
+                    <p>We offer a wide range of services including fabric research, development, pattern and sample making, quality production, shipping, importing, and delivery.</p>
                     <p></p>
                 </div>
                 <div class="clients-list">
@@ -131,7 +138,19 @@
                         <div class="col-lg-4">
                             <img class="dkny"src="http://demandware.edgesuite.net/aatg_prd/on/demandware.static/Sites-dkny-Site/-/default/dwa9d71a68/images/DKNY-LOGO-NEW.png">
                         </div>
-                </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="http://www.etcetera.com/assets/images2016/logo.png">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="http://2issupu8pi91jkmfjxku5c1920.wpengine.netdna-cdn.com/files/2013/07/joan-vass-logo.jpg">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="https://s3-us-west-2.amazonaws.com/pcw-uploads/logos/haute-hippie-promo-codes-coupons.png">
+                        </div>
+                    </div>
             </div>
         </div>
     </section>
