Finished first draft layout

--- a/produce.html
+++ b/produce.html
@@ -17,6 +17,7 @@
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
+    <link href="css/produce.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -72,7 +73,7 @@
 
 
     <!-- Intro Section -->
-    <section id="contact" class="contact-section">
+    <section id="production" class="contact-section">
         <div class="container">
                 <div class="prairie-header">
                     <div class="contact-wrapper">
@@ -89,10 +90,26 @@
     <section id="services" class="services-section">
         <div class="container">
                 <div class="services-header">
-                    <h1>Services</h1>
-                    <p>High Quality Garments</p>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
-                    <p></p>
+                    <h1 class="production-service">Services</h1>
+                    <p class="service-title">Fabric Research</p>
+                    <p class="service-description">We have a library in our New York Office of China origin fabrics. Knit fabrics and woven fabrics. Work with the designers with fabrics. The design or development team can give a wishlist and we would prepare fabrics on that list.</p>
+
+                    <p class="service-title">Development</p>
+                    <p class="service-description">Making photo samples from information provided by the client. Info can be tech packs and or pattern and or original garments.</p>
+
+                    <p class="service-title">Pattern/Sample making</p>
+                    <p class="service-description">Our china office houses our pattern room, cutting room, and sample hands. We can produce photo samples and  fit samples in-house. </p>
+
+                    <p class="service-title">Quality Production</p>
+                    <p class="service-description">Our own Quality Control team does cutting, inline, end of line and shipping inspections in the factories.</p>
+
+                    <p class="service-title">Shipping</p>
+                    <p class="service-description">We can handle all steps in the shipping process from china export documents through delivery to your D/C distribution center. We will customs clear and pay duties as part of our service.</p>
+
+                    <p class="service-title">Delivery</p>
+                    <p class="service-description">we can deliver to you anywhere in the US D/C or deliver to local port for your own trucks pickup.</p>
+
+                    <a class="service-description" href="contact.html" style="color:black; padding-top:10px;">Contact Us</a>
                 </div>
         </div>
     </section>
