--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -102,15 +102,15 @@
                     <div class="col-lg-6">
                         <img class="fashion-district" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/13103429_1736461356598301_6777169868591811346_n.jpg?oh=07cb456ccf35178b729ea2764c6bfae3&oe=58AE4B50">
                         <div class="nyc-description">
-                            <h3>New York City</h3>
-                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non</p>
+                            <h3>US - New York City</h3>
+                            <p>Our New York Office focuses on interactions with the customers on fabric and product development. We review all sample choices and tech packs with our clients before sending them to our China Hangzhou office.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <img class="fashion-district" src="https://cdn-images-1.medium.com/max/800/1*e3rxyVsruMikw_YtvJ34Eg.jpeg">
                         <div class="nyc-description">
                             <h3>China - Hangzhou</h3>
-                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non</p>
+                            <p>Our Hangzhou office is responsible for the production process from receipt of the customer's fabric and garment information. We process the info and produce the fabrics and garments necessary. Lastly, we ship the garment to wherever it is needed.</p>
                         </div>
                     </div>
             </div>
@@ -122,7 +122,7 @@
         <div class="container">
                 <div class="services-header">
                     <h1>Services</h1>
-                    <p>High Quality Garments</p>
+                    <p class="high-quality"><b>High Quality Garments</b></p>
                     <p>We offer a wide range of services including fabric research, development, pattern and sample making, quality production, shipping, importing, and delivery. Please visit the Services page for more info.</p>
                     <p></p>
                 </div>
@@ -148,7 +148,7 @@
                             <img class="joan-vass" src="images/joan-vass-logo.jpg">
                         </div>
                         <div class="col-lg-4">
-                            <img src="images/haute-hippie.png">
+                            <img class="haute-hippie" src="images/haute-hippie.png">
                         </div>
                     </div>
             </div>
